@@ -1,3 +1,9 @@
+2006-12-26 Carlos Nieves Onega <cnieves@iespana.es>
+
+	* include/prototype.h, src/g_smob.c:
+	  Added a new scheme function: get-page-filename, returning
+	  the page filename of the given page.
+	
 2006-12-21 Peter Brett   <peter@peter-b.co.uk>
 
 	* include/prototype.h, src/o_selection.c: Update interface of
